--- a/lang/fr.json
+++ b/lang/fr.json
@@ -69,7 +69,9 @@
   "libersf.cara": "Caractère",
   "libersf.carac": "Caractère",
   "libersf.perso": "Personnalité",
-  "libersf.inv": "Inventaire",
+  "libersf.inv0": "Inventaire",
+  "libersf.inv": "Divers",
+  "libersf.inv2": "Consommable",
   "libersf.sante": "Santé",
   "libersf.agil": "Armes à feu",
   "libersf.arti": "Armes exotique",
