--- a/lang/fr.json
+++ b/lang/fr.json
@@ -22,9 +22,9 @@
   "libersf.qte": "Quantité",
   "libersf.rest": "Point de résitance",
   "libersf.vie": "Point de vie",
-  "libersf.psy": "Magie",
-  "libersf.magie": "Magie",
-  "libersf.sort": "Sort",
+  "libersf.psy": "Psionique",
+  "libersf.magie": "Psionique",
+  "libersf.sort": "Capacité",
   "libersf.arme": "Arme",
   "libersf.armes": "Armes",
   "libersf.crime": "Crime",
@@ -77,6 +77,7 @@
   "libersf.arti": "Armes exotique",
   "libersf.bali": "Athlétisme",
   "libersf.comb": "Combat rapproché",
+  "libersf.Biot": "Biotech",
   "libersf.cong": "Conduite",
   "libersf.comp": "Électronique",
   "libersf.dext": "Escroquerie",
@@ -84,7 +85,7 @@
   "libersf.forc": "Furtivité",
   "libersf.inve": "Influence",
   "libersf.ajeu": "Ingénierie",
-  "libersf.meca": "Perception",
+  "libersf.meca": "Investigation",
   "libersf.mede": "Pilotage",
   "libersf.nata": "Piratage",
   "libersf.navi": "Plein air",
