--- a/lang/fr.json
+++ b/lang/fr.json
@@ -142,6 +142,8 @@
   "libersf.fan": "Les fanatiques",
   "libersf.moteur": "Moteur",
   "libersf.choisir": "Choisir",
+  "libersf.def": "Défense",
+  "libersf.rap": "Rapidité",
   "libersf.type": "Type",
   "libersf.type1": "Aèrien",
   "libersf.type2": "Terrestre",
