--- a/lang/fr.json
+++ b/lang/fr.json
@@ -171,7 +171,7 @@
   "libersf.aleatoire": "Générer un monstre aléatoire ",
   "libersf.base30": "Jet D100 sur Base 30",
   "libersf.caution": "*Attention : si la technologie a plus ★ que de dizaine, un malus de 10 sera appliqué par ★ de différence",
-  "libersf.caution2": "Si l'Agilité et la Deleveltérité sont toutes deux au moins à 30, vous avez une action supplémentaire par tour",
+  "libersf.caution2": "Si l'Agilité et la Detérité sont toutes deux au moins à 30, vous avez une action supplémentaire par tour",
   "libersf.regle": "1° Blessure => Dégat - point d'armure",
   "libersf.regle2": "2° Pv armure - Dégats",
   "libersf.regle3": "Si PV>0 Effectuer un jet de survie, réussite reste à 0 sinon sur 1d100 :",
