--- a/lang/fr.json
+++ b/lang/fr.json
@@ -20,7 +20,7 @@
   "libersf.portee": "Portée",
   "libersf.valeur": "Valeur",
   "libersf.qte": "Quantité",
-  "libersf.rest": "Point de résitance",
+  "libersf.rest": "Point de résistance",
   "libersf.vie": "Point de vie",
   "libersf.psy": "Psionique",
   "libersf.magie": "Psionique",
